--- a/application/CohortManager/compose.cohort-distribution.yaml
+++ b/application/CohortManager/compose.cohort-distribution.yaml
@@ -4,6 +4,7 @@ services:
   distribute-participant:
     container_name: distribute-participant
     image: cohort-manager-distribute-participant
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
@@ -30,38 +31,44 @@ services:
   retrieve-cohort-distribution-data:
     container_name: retrieve-cohort-distribution-data
     image: cohort-manager-retrieve-cohort-distribution-data
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: CohortDistributionServices/RetrieveCohortDistribution/Dockerfile
     profiles: [bs-select]
+    ports:
+      - "7078:7078"
     environment:
       - ASPNETCORE_URLS=http://*:7078
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
       - CohortDistributionDataServiceURL=http://cohort-distribution-data-service:7992/api/CohortDistributionDataService/
-      - BsSelectRequestAuditDataService=http://bs-select-request-audit-data-service:7956/api/BsSelectRequestAuditDataService/
+      - BsSelectRequestAuditDataService=http://bs-request-audit-data-service:7956/api/BsSelectRequestAuditDataService/
       - AcceptableLatencyThresholdMs=500
-      - CohortDistributionDataServiceURL=http://localhost:7992/api/CohortDistributionDataService/
 
   retrieve-cohort-request-audit:
     container_name: retrieve-cohort-request-audit
     image: cohort-manager-retrieve-cohort-request-audit
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
       dockerfile: CohortDistributionServices/RetrieveCohortRequestAudit/Dockerfile
     profiles: [bs-select]
+    ports:
+      - "7086:7086"
     environment:
       - ASPNETCORE_URLS=http://*:7086
       - DtOsDatabaseConnectionString=Server=db,1433;Database=${DB_NAME};User Id=SA;Password=${PASSWORD};TrustServerCertificate=True
       - CohortDistributionDataServiceURL=http://cohort-distribution-data-service:7992/api/CohortDistributionDataService/
-      - BsSelectRequestAuditDataService=http://bs-select-request-audit-data-service:7956/api/BsSelectRequestAuditDataService/
+      - BsSelectRequestAuditDataService=http://bs-request-audit-data-service:7956/api/BsSelectRequestAuditDataService/
       - ExceptionFunctionURL=http://create-exception:7070/api/CreateException
 
   transform-data-service:
     container_name: transform-data-service
     image: cohort-manager-transform-data-service
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
@@ -79,6 +86,7 @@ services:
   remove-validation-exception-data:
     container_name: remove-validation-exception-data
     image: cohort-manager-remove-validation-exception-data
+    platform: "linux/amd64"
     networks: [cohman-network]
     build:
       context: ./src/Functions/
